# CampAIgn-RPG-Engine

./: .gitignore  LONG_TERM_GOALS.md  README.md  pyproject.toml
campaign_rpg_engine/: __init__.py  action_outcome.py  area_edit.py  area_edit_parse.py  entity_templates.py  game_profile.py  memory.py  observations.py  perception.py  prompt_blocks.py  reserved_names.py  session.py  session_persistence.py  simulation.py  snapshot.py  turn_record.py  world_edit_api.py
campaign_rpg_engine/actions/: interact.py  move.py
campaign_rpg_engine/events/: __init__.py  registry.py
campaign_rpg_engine/interaction_handlers/: __init__.py  base.py  registry.py
campaign_rpg_engine/llm/: affinity_update.py  prompt_context.py  schemas.py  token_estimate.py
campaign_rpg_engine/memory_modules/: affinity.py  affinity_ladder.py  base.py  consolidation_runner.py  registry.py  rolling_summary.py  serialization.py
campaign_rpg_engine/prompt_slots/: __init__.py  registry.py
campaign_rpg_engine/turn_verbs/: __init__.py  phases.py  registry.py
docs/: MIGRATION-0.7-to-1.0.md  README.md  ROADMAP.md  cli.md  releasing.md  v0-implementation-readiness-checklist.md  v0.1-implementation-readiness-checklist.md  v0.2-implementation-readiness-checklist.md  v0.2.5-changelog.md  v0.3.0-changelog.md  v0.3.1-changelog.md  v0.3.2-changelog.md  v0.4.0-changelog.md  v0.4.1-changelog.md  v0.4.2-changelog.md  v0.4.5-changelog.md  v0.4.6-changelog.md  v0.6.0-changelog.md  v0.6.1-changelog.md
docs/UML/: 01-system-overview.md
docs/changelog/: README.md  v0.7.1-changelog.md  v0.7.2-changelog.md  v1.0.0-changelog.md  v1.2.0-changelog.md  v1.2.1-changelog.md  v1.4.0-changelog.md  v1.4.1-changelog.md  v1.4.2-changelog.md  v1.5.0-changelog.md  v1.7.1-changelog.md  v1.7.4-changelog.md
docs/guides/: README.md  api-reference.md  building-on-campaign-rpg-engine.md  building-on-realm-fabric.md  handlers.md  memory-and-lorebooks.md  overview.md  persistence.md  plugins.md  turns.md
docs/schemas/: AgentActionTurn.py  AgentCompoundTurn.py  AgentNavigationTurn.py  AgentTurn.py
examples/: README.md
examples/custom_memory/: README.md  rolling_summary_custom.py
examples/minimal-server/: README.md
examples/reference_handlers/: README.md  __init__.py
profiles/default_compound/: few_shots.txt  template.txt
realm_fabric/: __init__.py  agent.py  area.py  area_edit.py  area_edit_parse.py  compound_arg_parse.py  emote_phrasing.py  game_profile.py  interact_templates.py  memory.py  move_target.py  object.py  observations.py  occupancy.py  pathfinding.py  perception.py  prompt_blocks.py  prompt_template.py  session.py  session_area_edit.py  session_persistence.py  simulation.py  snapshot.py  triggers.py  vision_bearing.py  world_edit_api.py
realm_fabric/actions/: __init__.py  emote.py  interact.py  move.py  speak.py
realm_fabric/interaction_handlers/: __init__.py  base.py  registry.py
realm_fabric/llm/: client.py  memory_summary.py  prompt.py  prompt_context.py  schemas.py
realm_fabric/log_utils/: __init__.py
realm_fabric/lorebook/: __init__.py  factory.py  import_st.py  models.py  (+3 more)
src/: __init__.py  action_outcome.py  agent.py  area.py  area_edit.py  compound_stepper.py  coordinates.py  effect_spec.py  emote_phrasing.py  game_profile.py  interact_templates.py  main.py  memory.py  move_target.py  object.py  object_action.py  object_effects.py  observations.py  occupancy.py  pathfinding.py  perception.py  prompt_blocks.py  prompt_template.py  session.py  session_area_edit.py  session_persistence.py  simulation.py  snapshot.py  stepper_commands.py  triggers.py  turn_record.py  vision_bearing.py  world.py  world_edit.py
tests/: conftest.py  test_affinity_memory.py  test_area.py  test_area_config.py  test_area_edit.py  test_area_events.py  test_compound_turn.py  test_coordinate_move.py  test_custom_memory_modules.py  test_emote.py  test_entity_templates.py  test_events.py  test_extensions.py  test_game_profile.py  test_hidden_objects.py  test_interact_path_move_step.py  test_interact_pathing.py  test_interact_templates.py  test_interaction_handlers.py  test_llm_client.py  test_lorebook_factory.py  test_lorebook_import.py  test_lorebook_matcher.py  test_lorebook_scan_config.py  test_lorebook_st_defaults.py  test_memory_modules.py  test_move_area_effect.py  test_move_messages.py  test_move_pathing.py  test_move_target.py  test_movement_blocking.py  test_multi_agent.py  test_object_actions.py  test_object_footprint.py  test_observations.py  test_packaging.py  test_passive_vision_interactions.py  test_perception.py  test_player_agent.py  test_private_data.py  (+24 more)
(+76 files in other folders)
