[project]
name = "realm-fabric"
version = "0.2.0"
description = "Grid-based agent simulation framework for reliable structured LLM output (V0.2 — compound turns, coordinate move, object interact)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "openai",
    "rich",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[project.scripts]
realm = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true
