[project]
name = "realm-fabric"
version = "1.0.0"
description = "Grid-based LLM agent simulation engine — Session API, multi-area worlds, tactical movement, compound turns, pluggable memory"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "DaveH-Ghost", email = "davidhall.a27@gmail.com" },
]
keywords = [
    "llm",
    "agents",
    "simulation",
    "game-engine",
    "grid",
    "roleplay",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic",
    "openai",
    "rich",
    "python-dotenv",
]

[project.urls]
Homepage = "https://github.com/DaveH-Ghost/Realm-Fabric"
Documentation = "https://github.com/DaveH-Ghost/Realm-Fabric/blob/main/docs/README.md"
Repository = "https://github.com/DaveH-Ghost/Realm-Fabric"
Issues = "https://github.com/DaveH-Ghost/Realm-Fabric/issues"
Changelog = "https://github.com/DaveH-Ghost/Realm-Fabric/blob/main/docs/changelog/README.md"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["realm_fabric"]

[tool.hatch.build.targets.wheel]
force-include = { "profiles" = "profiles" }

[tool.hatch.build.targets.sdist]
include = [
    "/profiles",
]
force-include = { "profiles" = "profiles" }

[tool.uv]
package = true
